RESOLVED FIXED 285270
Fix WritingMode::isLineInverted to return correctly for sideways-lr
https://bugs.webkit.org/show_bug.cgi?id=285270
Summary Fix WritingMode::isLineInverted to return correctly for sideways-lr
fantasai
Reported 2024-12-31 19:39:21 PST
The logic in WritingMode::isLineInverted fails to account for `writing-mode: sideways-lr` since it fails to distinguish between `vertical-lr` and `sideways-lr`. Also we should be using it in `BoxGeometryUpdater::formattingContextConstraints` where we're incorrectly checking isBlockFlipped() instead.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-31 19:39:30 PST
fantasai
Comment 2 2025-01-01 00:53:28 PST
EWS
Comment 3 2025-01-02 12:00:08 PST
Committed 288371@main (f4b48e25beae): <https://commits.webkit.org/288371@main> Reviewed commits have been landed. Closing PR #38446 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.