Fix isLineInverted to handle sideways-lr correctly https://bugs.webkit.org/show_bug.cgi?id=285270 rdar://problem/142223524

Reviewed by Tim Nguyen.

Adjusts logic in WritingMode::isLineInverted() to distinguish vertical-lr and
sideways-lr correctly.

* Source/WebCore/platform/text/WritingMode.h:
(WebCore::WritingMode::isLineInverted const): Adjust logic to distinguish vertical-lr and sideways-lr.
* Tools/TestWebKitAPI/Tests/WebCore/WritingModeTests.cpp:
(TestWebKitAPI::TEST(WritingMode, LineQueries)):

Canonical link: https://commits.webkit.org/288371@main